<resources>
    <string name="app_name">MAD - Level 1: Task 1</string>
    <string name="title_label">Guess if the next throw is going to be lower, equal to or higher then the previous one.</string>
    <string name="last_throw_label">Last Throw: %d</string>
    <string name="dice_img_description">Dice</string>
    <string name="btn_lower_label">Lower</string>
    <string name="btn_equals_label">Equals</string>
    <string name="btn_higher_label">Higher</string>
    <string name="correct">Good guess!</string>
    <string name="incorrect">Bad luck, try again…</string>
</resources>